tests/lang/errors/fault_div_zero.thera
//! spec: fault-div-zero
//! mode: run

fn main() -> Int {
    let a = 10;
    let b = 0;
    // Integer divide-by-zero traps (unlike overflow, which wraps).
    let x = a / b;   // expect trap: division by zero
    println('${x}');
    return 0;
}
